#WIP: 95% - endpoints finalizados.
evento para notificar usuário criado

docker ajustado para iniciar o container - falta: configurar scheduler e listener para fila
